tests/fixtures/valid/run_arithmetic.lby
fn add x i64 y i64 -> i64
    x + y

fn main -> i64
    let value i64 = add(40, 2)
    value
