tests/fixtures/invalid/type_mismatch.lby
fn main -> i64
    let value bool = 1
    value
